# NEXUS

./: .env.example  .gitignore  Dockerfile  HACKATHON_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  NEXUS_AGENT_README.md  README.md  api_server.py  audit.py  audit_api.py  bob_task_may-17-2026_5-01-56-pm.md  create_nexus_agent.py  docker-compose.yml  fix_data.py  nexus_agent.py  nexus_config_sample.txt  pyproject.toml  pyrightconfig.json  repo_analyzer.py  requirements.txt  test_bob_nexus.json  test_nexus_agent.py  test_nexus_output.json  test_wordpress_scan.py
analyses/WordPress/output/: counterfactual_traces.json  decay_monitor_report.json  knowledge_concentration.json  nexus_data.json  nexus_layer1_dprs.json
analyses/requests/output/: counterfactual_traces.json  decay_monitor_report.json  knowledge_concentration.json  nexus_data.json  nexus_layer1_dprs.json
docs/: ARCHITECTURE.md
nexus-dashboard/: index.html
nexus-frontend/: package-lock.json  package.json
nexus-frontend/src/: App.jsx  index.css
nexus-frontend/src/views/: CausalGraph.jsx
nexus/core/decay/: decay_monitor.py
nexus/core/git/: history_analyzer.py
nexus/core/graph/: causal_graph.py
nexus/core/scanner/: __init__.py  repo_scanner.py
nexus/models/: __init__.py  commit.py  config.py  decay.py  dpr.py  output.py  scan.py
nexus/services/: llm_client.py
nexus/tests/: conftest.py
nexus_layer2/: api.py  counterfactual_sim.py  decay_monitor.py  generate_submission.py  knowledge_concentration.py  llm_provider.py  merge_nexus_data.py  neo4j_loader.py  nexus_data.json  repo_analyzer.py  requirements.txt  risk_report_pdf.py  submission_export.py  weaviate_ingest.py
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/: .gitignore  README.md
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/backend/: .env.example  error.txt  package-lock.json  package.json
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/backend/src/: server.js
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/backend/src/middleware/: authMiddleware.js  ipLogger.js
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/backend/src/routes/: auth.js  geofence.js  memories.js  ml.js  (+4 more)
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/frontend/: .env.example  index.html  package-lock.json  package.json
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/frontend/src/: App.jsx
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/ml-service/: .env.example  requirements.txt
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/ml-service/app/: main.py
nexus_layer2/_repos/Anshumaan1254_ARKA.git_8263cac250/supabase/migrations/: 001_schema.sql  002_storage_policies.sql  003_object_detection.sql  004_geofencing.sql  005_fix_assignment_rls.sql
nexus_layer2/_repos/Anshumaan1254_PagePal.git_ef0d1b1c10/: README.md  lint-report.json  package-lock.json  package.json  package_extension.ps1  vite.config.js
nexus_layer2/_repos/Anshumaan1254_PagePal.git_ef0d1b1c10/public/: manifest.json
nexus_layer2/_repos/Anshumaan1254_PagePal.git_ef0d1b1c10/src/: content-script.js  service-worker.js
nexus_layer2/_repos/Anshumaan1254_PagePal.git_ef0d1b1c10/src/sidepanel/: App.jsx  index.css  index.html
nexus_layer2/submission/: run_demo.py
postgres-analysis/output/: counterfactual_traces.json  decay_monitor_report.json  knowledge_concentration.json  nexus_data.json
scripts/: demo.py
submission/: bob_session_export.json  demo_script.md  submission_form.md
(+13 files in other folders)
